fixed overflow scroll and local colors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,24 @@
 body,html {
     height: 100%;
 }
+
+#content {
+    overflow-y: auto;
+    flex: 2;
+    display: flex;
+}
+.vwrapper {
+  display: flex;
+  flex-direction: column;
+
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: stretch;
+
+  height: 100%;
+}
+
+table {
+    margin-bottom: 0 !important;
+}
